2016-06-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	
	* awk.h: Improve comment about STRING and NUMBER type assignment.
	(nondec2awknum): Add endptr argument.
	(fixtype): New inline function to clarify a scalar's type.
	* array.c (sort_up_value_type): Call fixtype before checking the value
	types.
	* awkgram.y (yylex): Pass NULL endptr argument to nondec2awknum.
	(valinfo): Remove dead tests: either STRING or NUMBER or both
	must be set, so there's no reason to continue with checks for NUMCUR or
	STRCUR.
	* builtin.c (do_exp, do_int, do_log, do_sqrt, do_sin, do_cos, do_srand):
	Fix lint check for non-numeric argument.
	(do_string): Fix lint check for 1st and 2nd args being strings.
	(do_length): Fix assert to allow for Node_typedregex.
	Fix lint check for non-string argument.
	(format_tree): Fix type detection for '%c' arguments.
	(do_strftime): Fix lint check for non-numeric 2nd argument and
	lint check for non-string 1st argument.
	(do_mktime): Fix lint check for non-string argument. Eliminate useless
	logic to save and restore terminating NUL.
	(do_system, do_tolower, do_toupper): Fix lint check for non-string
	argument.
	(do_atan2, do_lshift, do_rshift, do_and, do_or, do_xor, do_compl,
	do_intdiv): Fix lint checks for non-numeric args.
	(do_sub): Attempt to clean up treatment of 3rd argument to gensub
	despite vague documentation of expected behavior.
	(do_strnum): Fix bug in number detection logic, and pass new endptr
	arg to nondec2awknum.
	(nondec2awknum): Add endptr argument so caller can detect how much
	of the string was consumed. Eliminate unnecessary logic to save
	and restore terminating NUL char.
	(do_typeof): Use a switch to specify which cases are supported, and
	issue a warning message when a corrupt type is detected.
	* debug.c (print_memory): At least one of NUMBER and STRING should
	be set, so no need to check for NUMCUR or STRCUR in addition.
	* eval.c (cmp_nodes): Use fixtype function to fix arg types.