@@ -1,3 +1,8 @@
+2016-06-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* awkgram.y: Eliminate STRCUR tests. Must use STRING to test whether
+	a scalar is a string.
+
 2016-06-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 	
 	* awk.h: Improve comment about STRING and NUMBER type assignment.
